# KinectFusion_on_LIPSedgeDL

./: CMakeLists.txt
src/: main.cpp
